--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    id 'kotlin-kapt'
+
+    id("dagger.hilt.android.plugin")
 }
 
 android {
@@ -26,7 +30,7 @@ android {
         }
     }
     compileOptions {
-        coreLibraryDesugaringEnabled true
+       // coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
@@ -74,8 +78,8 @@ dependencies {
     implementation 'com.airbnb.android:lottie-compose:4.1.0'
 
     //coil
-    implementation "io.coil-kt:coil:2.0.0"
-    implementation "io.coil-kt:coil-compose:2.0.0"
+//    implementation "io.coil-kt:coil:2.0.0"
+//    implementation "io.coil-kt:coil-compose:2.0.0"
 
     //scrollable callendar
     implementation "com.github.Rafsanjani:datepickertimeline:0.5.0"
@@ -85,4 +89,28 @@ dependencies {
     //Navigation
     implementation("androidx.navigation:navigation-compose:2.4.2")
 
+ //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+
+    //dagger
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+
+
+
+}
+kapt {
+    correctErrorTypes = true
 }
