--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,12 @@ buildscript {
         compose_version = '1.1.1'
     }
 
+    dependencies {
 
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath("com.google.dagger:hilt-android-gradle-plugin:2.38.1")
+
+    }
 
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -14,7 +19,6 @@ plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-
 }
 
 
