Splash sceren uradjen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,9 @@ dependencies {
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
+    //status bar
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+
 
 }
 kapt {
