--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     //status bar
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 
+    implementation 'com.github.bondatutu:ComposeChips:0.1.5'
 
 }
 kapt {
