--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,9 @@ dependencies {
 
     implementation 'com.github.bondatutu:ComposeChips:0.1.5'
 
+    //datastore
+    implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
 kapt {
     correctErrorTypes = true
