--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,9 @@ dependencies {
     //datastore
     implementation "androidx.datastore:datastore-preferences-core:1.0.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //jwt decoder
+    implementation 'com.auth0.android:jwtdecode:2.0.1'
 }
 kapt {
     correctErrorTypes = true
